megapod pt2: machine specific techs code

--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -47,10 +47,10 @@
   SUPPORT_TITLE_SUPPORT: "SUPPORT EQUIPMENT & COMPANIES"
   ARMOUR_TITLE_LANDSHIPS_CHASSIS: "LANDSHIP CHASSIS & UPGRADES"
   AUTOMAT_TITLE_AUTOMATRON: "AUTOMATRONS & UPGRADES"
-  AUTOMAT_TITLE_DUOPOD: "DUOPODS"
-  AUTOMAT_TITLE_TRIPOD: "TRIPODS"
-  AUTOMAT_TITLE_QUADRUPOD: "QUADRIPODS"
-  ARTILLERY_TITLE_AT: "ANTI-LANDSHIPS"
+  AUTOMAT_TITLE_DUOPOD: "DUOPOD"
+  AUTOMAT_TITLE_TRIPOD: "TRIPOD"
+  AUTOMAT_TITLE_QUADRUPOD: "QUADRUPOD"
+  ARTILLERY_TITLE_AT: "ANTI-LANDSHIP"
   ARTILLERY_TITLE_NUCLEAR: "NUCLEAR ARTILLERY"
   HORRORS_TITLE_ENCHANCED_HUMANS: "ENCHANCED HUMANS"
   HORRORS_TITLE_COMBAT_AMALGAMATES: "COMBAT AMALGAMATES"
@@ -58,7 +58,7 @@
   HORRORS_TITLE_COMMANDOS: "COMMANDOS"
   HORRORS_TITLE_SPECIAL_PROJECTS: "SPECIAL PROJECTS"
   AIR_TITLE_TRANSPORT: "TRANSPORT PLANES"
-  ROTARY_TITLE_HELI: "ROTARY ENGINE CRAFTS"
+  ROTARY_TITLE_HELI: "ROTARY ENGINE CRAFT"
  
    ## INFANTRY EQUIPMENT AND SUBTECHS ##
  
@@ -451,7 +451,19 @@
   improved_quadrupod_upgrade_1_nsb_desc:0 "$improved_quadrupod_upgrade_1_desc$"
   improved_quadrupod_upgrade_2_nsb:0 "$improved_quadrupod_upgrade_2$"
   improved_quadrupod_upgrade_2_nsb_desc:0 "$improved_quadrupod_upgrade_2_desc$"
- 
+
+  sp_armored_mpd_naval_engine_conversion_tech: "Naval Engine Conversion"
+  sp_armored_mpd_naval_engine_conversion_tech_desc: "Utilizing techniques used in naval engines such as reinforced crankshafts, high-torque transmissions and specialized cooling systems allow us to enhance the power output and durability of Megapods engines, allowing them to better manage the immense weight and stress."
+  sp_armored_mpd_all_terrain_footpads_tech: "All-Terrain Footpads"
+  sp_armored_mpd_all_terrain_footpads_tech_desc: "Advanced mechanism used in machine footpads allow it to travserse through various enviroments while handling immense weight of it"
+  sp_armored_mpd_specialized_field_manuals_tech: "Specialized Field Manuals"
+  sp_armored_mpd_specialized_field_manuals_tech_desc: "Distributing detailed training manuals and instruction among the crews of Megapods, covering unique operational procedures, maintenance protocols, and complex battlefield tactics required to effectively command these enormous walking machines."
+  sp_armored_mpd_high_caliber_devastator_cannon_tech: "High-Caliber Devastator Cannon"
+  sp_armored_mpd_high_caliber_devastator_cannon_tech_desc: "This powerful cannon was specifically designed to destroy heavily armored targets, fortifications, or even masses of enemy infantry. Its broad variety of shell types makes it an effective weapon against any land target."
+  sp_armored_mpd_weapon_fire_control_tech: "Weapon Fire Control"
+  sp_armored_mpd_weapon_fire_control_tech_desc: "Implementing advanced targeting optics, rangefinders, gyroscopic stabilizers and brand new gun pods mechanism to enhance weapon accuracy and firing coordination, ensuring the guns can effectively engage targets despite their massive recoil and slow maneuverability."
+  sp_armored_mpd_stabilization_mechanism_tech: "Advanced Stabilization Mechanism"
+  sp_armored_mpd_stabilization_mechanism_tech_desc: "Installing a set of digital and mechanical systems to guarantee maximum stability for the Megapod, preventing it from falling or tripping during movement or combat."
    # HIDDEN #
   jungle_automat_tech: "Jungle Specialized Automats"
  
