Siam national spirits & ideas GFXs

--- a/localisation/english/PB_country_specific/PB_Siam_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Siam_l_english.yml
@@ -25,7 +25,10 @@
   ##########################
   # IDEAS
   ##########################
-
+  
+  PB_SIA_Death_Railway:0 "Legacy of the Burma Railway Affair"
+  PB_SIA_Khana_Ratsadon:0 "Khana Ratsadon"
+  
   ##########################
   # DECISIONS
   ##########################
