National spirit GFX & tweaks

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -31,21 +31,21 @@
   VIN_Insurgency_an_ADJ:0 "Vietnamese"
 
   VIN_Client_Empire_ni:0 "Empire of Vietnam"
-  VIN_Client_Empire_ni_DEF:0 "The Empire of Vietnam"
+  VIN_Client_Empire_ni_DEF:0 "the Empire of Vietnam"
   VIN_Client_Empire_ds:0 "Empire of Vietnam"
-  VIN_Client_Empire_ds_DEF:0 "The Empire of Vietnam"
+  VIN_Client_Empire_ds_DEF:0 "the Empire of Vietnam"
   VIN_Client_Empire_rc:0 "Empire of Vietnam"
-  VIN_Client_Empire_rc_DEF:0 "The Empire of Vietnam"
+  VIN_Client_Empire_rc_DEF:0 "the Empire of Vietnam"
   VIN_Client_Empire_an:0 "Empire of Vietnam"
-  VIN_Client_Empire_an_DEF:0 "The Empire of Vietnam"
+  VIN_Client_Empire_an_DEF:0 "the Empire of Vietnam"
   VIN_Client_Empire_cn:0 "Empire of Vietnam"
-  VIN_Client_Empire_cn_DEF:0 "The Empire of Vietnam"
+  VIN_Client_Empire_cn_DEF:0 "the Empire of Vietnam"
   VIN_Client_Empire_lb:0 "Empire of Vietnam"
-  VIN_Client_Empire_lb_DEF:0 "The Empire of Vietnam"
+  VIN_Client_Empire_lb_DEF:0 "the Empire of Vietnam"
   VIN_Client_Empire_ss:0 "Empire of Vietnam"
-  VIN_Client_Empire_ss_DEF:0 "The Empire of Vietnam"
+  VIN_Client_Empire_ss_DEF:0 "the Empire of Vietnam"
   VIN_Client_Empire_jc:0 "Empire of Vietnam"
-  VIN_Client_Empire_jc_DEF:0 "The Empire of Vietnam"
+  VIN_Client_Empire_jc_DEF:0 "the Empire of Vietnam"
   VIN_Client_Empire_ni_ADJ:0 "Vietnamese"
   VIN_Client_Empire_rc_ADJ:0 "Vietnamese"
   VIN_Client_Empire_lb_ADJ:0 "Vietnamese"
@@ -54,6 +54,31 @@
   VIN_Client_Empire_ds_ADJ:0 "Vietnamese"
   VIN_Client_Empire_cn_ADJ:0 "Vietnamese"
   VIN_Client_Empire_an_ADJ:0 "Vietnamese"
+  
+  SIA_ENG_ni:0 "Rattanakosin Empire"
+  SIA_ENG_ni_DEF:0 "the Rattanakosin Empire"
+  SIA_ENG_ds:0 "Rattanakosin Empire"
+  SIA_ENG_ds_DEF:0 "the Rattanakosin Empire"
+  SIA_ENG_rc:0 "Rattanakosin Empire"
+  SIA_ENG_rc_DEF:0 "the Rattanakosin Empire"
+  SIA_ENG_an:0 "Rattanakosin Empire"
+  SIA_ENG_an_DEF:0 "the Rattanakosin Empire"
+  SIA_ENG_cn:0 "Rattanakosin Empire"
+  SIA_ENG_cn_DEF:0 "the Rattanakosin Empire"
+  SIA_ENG_lb:0 "Rattanakosin Empire"
+  SIA_ENG_lb_DEF:0 "the Rattanakosin Empire"
+  SIA_ENG_ss:0 "Rattanakosin Empire"
+  SIA_ENG_ss_DEF:0 "the Rattanakosin Empire"
+  SIA_ENG_jc:0 "Rattanakosin Empire"
+  SIA_ENG_jc_DEF:0 "the Rattanakosin Empire"
+  SIA_ENG_ni_ADJ:0 "Thai"
+  SIA_ENG_rc_ADJ:0 "Thai"
+  SIA_ENG_lb_ADJ:0 "Thai"
+  SIA_ENG_ss_ADJ:0 "Thai"
+  SIA_ENG_jc_ADJ:0 "Thai"
+  SIA_ENG_ds_ADJ:0 "Thai"
+  SIA_ENG_cn_ADJ:0 "Thai"
+  SIA_ENG_an_ADJ:0 "Thai"
 
   PHI_Insurgency_ni:0 "Filipino Insurrection"
   PHI_Insurgency_ni_DEF:0 "the Filipino Insurrection"
