unit terrain modifiers + small gui tweak

--- a/localisation/english/PB_Warcrimes_l_english.yml
+++ b/localisation/english/PB_Warcrimes_l_english.yml
@@ -117,6 +117,7 @@
   ##########################
   # SCRIPTED GUI
   ##########################
+  wmd_menu_button_tt: "Click to open the §YWMDs§! menu"
   Chemweapons_tt:0 "§GDeploy Chemical Weapons§!"
   Chemweapons_tt_delayed:0 "Selecting this will deploy our current chemical stockpile on this state, affecting it for approximately §YFour Weeks§!"
 
