oregon and gorogorun peace deals

--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -284,4 +284,21 @@
   annexation_decision_taiping_desc: "The regions formerly controlled by the Taiping has been brought under our control as our troops occupy the region. We must now decide what to do with it."
   annexation.7014.a: "Liberate the South Chinese territories under a friendly regime"
 
+  annexation_decision_oregon: "Fate of Oregon"
+  annexation_decision_oregon_desc: "The region of Oregon has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_oregon: "Fate of Oregon"
+  annexation_oregon_desc: "The region of Oregon has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.2012.a: "Create a new state in Oregon"
+  annexation.2012.give_to_northwest_territories: "Expand the Northwestern Territories"
+
+  annexation_decision_gorogorun: "Fate of Gorogorun"
+  annexation_decision_gorogorun: "The regions formerly controlled by Gorogorun has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_gorogorun: "Fate of Gorogorun"
+  annexation_gorogorun_desc: "The regions formerly controlled by Gorogorun has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.2013.a: "Liberate Gorogorun"
+  annexation.2013.give_to_northwest_territories: "Expand the Northwestern Territories"
+  annexation.2013.give_to_oregon: "Integrate it into Oregon"
+
   #Events
