--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -7476,3 +7476,27 @@
   
   KRA_Big: "Ring of Fire"
   
+  NWD_Oregon_Generic_ni:0 "Republic of Oregon"
+  NWD_Oregon_Generic_ni_DEF:0 "The Republic of Oregon"
+  NWD_Oregon_Generic_ds:0 "Republic of Oregon"
+  NWD_Oregon_Generic_ds_DEF:0 "The Republic of Oregon"
+  NWD_Oregon_Generic_rc:0 "Republic of Oregon"
+  NWD_Oregon_Generic_rc_DEF:0 "The Republic of Oregon"
+  NWD_Oregon_Generic_an:0 "Republic of Oregon"
+  NWD_Oregon_Generic_an_DEF:0 "The Republic of Oregon"
+  NWD_Oregon_Generic_cn:0 "Republic of Oregon"
+  NWD_Oregon_Generic_cn_DEF:0 "The Republic of Oregon"
+  NWD_Oregon_Generic_lb:0 "Republic of Oregon"
+  NWD_Oregon_Generic_lb_DEF:0 "The Republic of Oregon"
+  NWD_Oregon_Generic_ss:0 "Republic of Oregon"
+  NWD_Oregon_Generic_ss_DEF:0 "The Republic of Oregon"
+  NWD_Oregon_Generic_jc:0 "Republic of Oregon"
+  NWD_Oregon_Generic_jc_DEF:0 "The Republic of Oregon"
+  NWD_Oregon_Generic_ni_ADJ:0 "Oregonian"
+  NWD_Oregon_Generic_rc_ADJ:0 "Oregonian"
+  NWD_Oregon_Generic_lb_ADJ:0 "Oregonian"
+  NWD_Oregon_Generic_ss_ADJ:0 "Oregonian"
+  NWD_Oregon_Generic_jc_ADJ:0 "Oregonian"
+  NWD_Oregon_Generic_ds_ADJ:0 "Oregonian"
+  NWD_Oregon_Generic_cn_ADJ:0 "Oregonian"
+  NWD_Oregon_Generic_an_ADJ:0 "Oregonian"
